--- a/contactus.html
+++ b/contactus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Traveling Blog - Contact Us</title>
-  
+  <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f5f5f5;
@@ -56,7 +56,7 @@
     button:hover {
       background-color: #0056b3;
     }
-  
+  </style>
 </head>
 <body>
   <div class="contact-container">
